...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_clear"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/id_zone_modify_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/id_zone_remove_item"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_pencil"
...
