<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- String related to the zone management activity-->
    <string name="btn_create_zone_button_text">Create zone</string>
    <string name="btn_update_zone_button_text">Update zone</string>
    <string name="tv_create_zone_text">Create a new zone</string>
    <string name="tv_update_zone_text">Update an existing zone</string>
    <string name="missing_field_zone_management">Please fill all the required fields</string>
    <string name="zone_added_successfully">Your new zone was successfully added</string>
    <string name="zone_updated_successfully">The zone was successfully updated</string>
    <string name="zone_add_fail">Error while creating your new zone, please try again !</string>
    <string name="zone_update_fail">Error while update your zone, please try again !</string>
    <string name="zone_management_name_text">Name</string>
    <string name="zone_management_description_text">Description</string>
    <string name="zone_management_coordinates_text">Zone coordinates</string>
    <string name="zone_management_coordinates_set">Set</string>
    <string name="zone_management_coordinates_not_set">Not set</string>
    <string name="btn_modify_coord_update_text">Update</string>
    <string name="btn_modify_coord_set_text">Set</string>
    <string name="btn_delete_coord_text">Delete</string>

    <!-- ZoneManagement List activity-->
    <string name="fail_to_get_list_zones">Failed to get the list of zones</string>
...
