...
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.AdminHubFragment"
    android:id="@+id/id_fragment_admin_hub">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:alignmentMode="alignMargins"
        app:columnCount="1"
...
            android:orientation="horizontal"
            app:layout_column="0"
            app:layout_columnSpan="1"
            app:layout_row="1">

            <Button
                android:id="@+id/btnRedirectZoneManagement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:drawableTop="@drawable/ic_place"
                android:drawableTint="@color/purple_500"
                android:text="@string/admin_hub_btn_zone_text"
...
